<resources>
    <string name="app_name">Вгадай слово</string>
    <string name="play">Грати</string>
    <string name="rules">Правила</string>
    <string name="Commands">Команди</string>
    <string name="toMain">ᐸ</string>
    <string name="Command_1">Команда 1</string>
    <string name="Command_2">Команда 2</string>
    <string name="start">Почати</string>
    <string name="Command_text">Команда</string>
    <string name="Command">ЗСУ</string>
    <string name="Score_text">Очки</string>
    <string name="right">Вгадано</string>
    <string name="wrong">Не вгадано</string>
    <string name="Score">0</string>
    <string name="Word_text">Слово</string>
    <string name="Word">Приклад</string>
    <string name="logo">logo</string>
    <string name="winner_is">Перемогла команда</string>
    <string name="play_again">Реванш</string>
    <string name="go_main_menu">У головне меню</string>
    <string name="Timer">Таймер</string>
    <string name="timer">0</string>
    <string name="start_game">Старт</string>
    <string name="timer_text">Залишилось секунд</string>
    <string name="sound_set">Звук увімкнено</string>
    <string name="score_set_hint">20</string>
    <string name="score_set">Очків для перемоги</string>
    <string name="timer_set_hint">20</string>
    <string name="timer_set">Секунд на раунд</string>
    <string name="empty_background">bg</string>
    <string name="settings_text">Натисніть на кнопки знизу, щоб змінити їх налаштування</string>
    <string name="add_command_3">+</string>
    <string name="Command_3">Команда 3</string>
    <string name="Command_4">Команда 4</string>
    <string name="delete_command">—</string>
</resources>