<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".command_set">

    <TextView
        android:id="@+id/settings_text"
        android:layout_width="0dp"
        android:layout_height="110sp"
        android:layout_marginStart="-15dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="center"
        android:text="@string/settings_text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:translationZ="3sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/to_main"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/background_setting"
        android:layout_width="match_parent"
        android:layout_height="110sp"
        android:background="@color/main"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="center"
        android:text="@string/empty_background"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="0sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/to_main"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/to_main"
        android:layout_width="wrap_content"
        android:layout_height="120sp"
        android:layout_marginStart="-12dp"
        android:layout_marginTop="-5dp"
        android:backgroundTint="@color/main"
        android:onClick="to_main"
        android:text="@string/toMain"
        android:textSize="24sp"
        app:cornerRadius="-30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/command_1_set"
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:layout_marginTop="-5dp"
        android:backgroundTint="@color/main"
        android:text="@string/Command_1"
        android:textAllCaps="true"
        android:textColor="@color/second_white"
        android:textSize="24sp"
        app:cornerRadius="-30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/background_setting" />

    <Button
        android:id="@+id/command_2_set"
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:layout_marginTop="-11dp"
        android:backgroundTint="@color/main"
        android:text="@string/Command_2"
        android:textColor="@color/second_white"
        android:textSize="24sp"
        app:cornerRadius="-30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/command_1_set" />

    <Button
        android:id="@+id/command_3_set"
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:layout_marginTop="-10dp"
        android:backgroundTint="@color/main"
        android:text="@string/Command_3"
        android:textColor="@color/second_white"
        android:textSize="24sp"
        android:visibility="invisible"
        app:cornerRadius="-30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/command_2_set" />

    <Button
        android:id="@+id/command_4_set"
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:layout_marginTop="-10dp"
        android:backgroundTint="@color/main"
        android:text="@string/Command_4"
        android:textColor="@color/second_white"
        android:textSize="24sp"
        android:visibility="invisible"
        app:cornerRadius="-30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/command_3_set" />

    <Button
        android:id="@+id/plus_command_3"
        android:layout_width="60sp"
        android:layout_height="70sp"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/switch_black_white"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/add_command_3"
        android:textAlignment="center"
        android:textColor="@color/switch_white_black"
        android:textSize="34sp"
        android:visibility="visible"
        app:cornerRadius="100sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/command_2_set"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/plus_command_4"
        android:layout_width="60sp"
        android:layout_height="70sp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/switch_black_white"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/add_command_3"
        android:textAlignment="center"
        android:textColor="@color/switch_white_black"
        android:textSize="34sp"
        android:visibility="invisible"
        app:cornerRadius="100sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/command_3_set"
        tools:ignore="DuplicateClickableBoundsCheck" />

    <Button
        android:id="@+id/delete_command_3"
        android:layout_width="60sp"
        android:layout_height="70sp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="75dp"
        android:backgroundTint="@color/switch_black_white"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/delete_command"
        android:textAlignment="center"
        android:textColor="@color/switch_white_black"
        android:textSize="28sp"
        android:visibility="invisible"
        app:cornerRadius="100sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/command_3_set" />

    <Button
        android:id="@+id/delete_command_4"
        android:layout_width="60sp"
        android:layout_height="70sp"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/switch_black_white"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/delete_command"
        android:textAlignment="center"
        android:textColor="@color/switch_white_black"
        android:textSize="28sp"
        android:visibility="invisible"
        app:cornerRadius="100sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/command_4_set" />

    <Button
        android:id="@+id/sound_set"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="135sp"
        android:layout_height="150sp"
        android:layout_marginStart="2dp"
        android:layout_weight="1"
        android:backgroundTint="@color/main"
        android:text="@string/sound_set"
        android:textColor="@color/second_white"
        android:textSize="16sp"
        app:cornerRadius="25sp"
        app:layout_constraintBottom_toTopOf="@+id/to_game"
        app:layout_constraintEnd_toStartOf="@+id/score_set"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/score_set"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="135sp"
        android:layout_height="150sp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:backgroundTint="@color/main"
        android:text="@string/score_set"
        android:textColor="@color/second_white"
        android:textSize="16sp"
        app:cornerRadius="25sp"
        app:layout_constraintBottom_toTopOf="@+id/to_game"
        app:layout_constraintEnd_toStartOf="@+id/timer_set"
        app:layout_constraintStart_toEndOf="@+id/sound_set" />

    <Button
        android:id="@+id/timer_set"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="135sp"
        android:layout_height="150sp"
        android:layout_marginEnd="2dp"
        android:backgroundTint="@color/main"
        android:text="@string/timer_set"
        android:textColor="@color/second_white"
        android:textSize="16sp"
        app:cornerRadius="25sp"
        app:layout_constraintBottom_toTopOf="@+id/to_game"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/score_set" />

    <TextView
        android:id="@+id/score_set_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/score_set_hint"
        android:textAlignment="center"
        android:textColor="@color/second_white"
        android:textSize="24sp"
        android:translationZ="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/score_set"
        app:layout_constraintEnd_toEndOf="@+id/score_set"
        app:layout_constraintStart_toStartOf="@+id/score_set" />

    <TextView
        android:id="@+id/timer_set_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/timer_set_hint"
        android:textAlignment="center"
        android:textColor="@color/second_white"
        android:textSize="24sp"
        android:translationZ="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/timer_set"
        app:layout_constraintEnd_toEndOf="@+id/timer_set"
        app:layout_constraintStart_toStartOf="@+id/timer_set" />

    <Button
        android:id="@+id/to_game"
        android:layout_width="0dp"
        android:layout_height="110sp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:backgroundTint="@color/main"
        android:onClick="to_game"
        android:text="@string/start"
        android:textSize="34sp"
        app:cornerRadius="100sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>